--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+/connection1.log
 /connection.log
 /.DS_Store
 /speedtest-cli
 /speedtest-cli.py
 /log/connection.log
+/log/connection1.log
 /log/.DS_Store
